<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/itemRowLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/item_name"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editQuantity"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:inputType="number"
            android:hint="@string/quantity"
            android:textSize="24sp"
            android:gravity="center"
            android:layout_marginHorizontal="4dp"
            android:autofillHints="none"
            android:focusable="false"
            android:clickable="false"
            android:background="@android:color/transparent" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:background="@color/purple_500"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_item"
            app:tint="@color/white" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:background="@color/purple_500"
            android:src="@drawable/trashcan"
            android:contentDescription="@string/delete_item"
            app:tint="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
